<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Kuini</string>
    
    <string-array name="menu_items">
        <item>Host new game</item>
        <item>Join existing game</item>
        <item>Settings</item>
        <item>About Kuini</item>
        <item>Start demo game</item>
    </string-array>
    
    <string name="select_host_label">Kuini - Select host device</string>
    
    <string name="error_no_bt">This device does not support Bluetooth. Kuini is exiting.</string>
    <string name="error_bt_disabled">Bluetooth was not enabled. Kuini is exiting.</string>
    
    <string name="preference_player_name">Player name</string>
    <string name="preference_draw_bg">Draw background</string>
    <string name="preference_show_fps">Display FPS</string>
    
    <string name="preference_opp_number">Number of opponents</string>
    <string name="preference_heal_ants">Autohealing ants</string>
    <string name="preference_faster_game">Increased game speed</string>
    <string name="preference_start">Start!</string>
    
    <string-array name="opp_number_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="opp_number_human">
        <item>One</item>
        <item>Two</item>
        <item>Three</item>
    </string-array>
    
    <string name="splash_before">Please wait for other players…</string>
    
    <string name="dialog_not_started">Game could not started.</string>
    <string name="dialog_fail">Game was interrupted.</string>
    <string name="dialog_winner_1"></string>
    <string name="dialog_winner_2">is the new Queen Ant!</string>
    
    <string name="dialog_btn">Exit</string>
    
    <string name="about_title">About Kuini</string>
    <string name="about">
        Kuini is a real-time multiplayer
        mobile game.\n\nIt has been developed 
        by Jagiellonian University students 
        during Team Project course.
    </string>
    <string name="about_ok">OK</string>
    
    <string name="splash_image_content_description">Splash image</string>
    
</resources>